--- a/css/modules/02-base.css
+++ b/css/modules/02-base.css
@@ -36,7 +36,7 @@ p {
 a {
   text-decoration: none;
   color: inherit;
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: var(--transition);
 }
 
 ul {
